# Admission-Hotness-Prediction-ML

./: admissions.csv  admissions_model.metrics.json  app_final_enhanced.py  config.py  data_dictionary.md  generate_data.py  pyproject.toml  train.py  train_v2.py
Academic/: init.md  开题报告.doc  文献综述.doc
Admission_Hotness_Prediction_ML/: .gitignore  .pdm-python  README.md  Roadmap.md  app.py  app_final.py  config.py  data.md  eda_and_feature_engineering.ipynb  generate_data.py  train_v2.py
